--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -2603,7 +2603,7 @@ label {
   z-index: 123;
 }
 .flat-slider.home-1 {
-  background-image: url("/images/slider/BR Mila - Scene 02.0.jpg");
+  background-image: url("/images/slider/Asset 1aaaa (1).jpg");
   background-attachment: fixed;
 }
 .flat-slider.home-1 .overlay {
